Add missing path in cmake source reference

--- a/src/pages/_partials/_steps/_add-sources.mdx
+++ b/src/pages/_partials/_steps/_add-sources.mdx
@@ -56,6 +56,7 @@ memfault_library(${MEMFAULT_SDK_ROOT} MEMFAULT_COMPONENTS
 #
 # Add the following to your target includes
 #   ${MEMFAULT_COMPONENTS_INC_FOLDERS}
+#   ${MEMFAULT_SDK_ROOT}/ports/include
 #   ${MEMFAULT_PORT_ROOT}
 ```
 
