Replace NCS reference with nRF Connect SDK

--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -103,8 +103,8 @@ Initialized empty Git repository in modules/memfault-firmware-sdk/.git/
   </TabItem>
   <TabItem value="^1.6.0">
 
-The SDK is part of the West manifest in NCS and is automatically downloaded when
-running `west update`. By default, it is downloaded to
+The SDK is part of the West manifest in nRF Connect SDK and is automatically
+downloaded when running `west update`. By default, it is downloaded to
 `<nRF Connect SDK path>/modules/lib/memfault-firmware-sdk/`.
 
   </TabItem>
