Add note to post on "Update Schedules" removal (#101)
This was the only mention of the "Update Schedules" feature that I could find in the docs.

--- a/blog/2019-07-23-schedules-threadx-releases-more.mdx
+++ b/blog/2019-07-23-schedules-threadx-releases-more.mdx
@@ -4,6 +4,12 @@ title: Schedules, More RTOS Support, MPU Analyzer, and More
 
 ## Update Schedules
 
+:::note
+
+EDIT (Aug. 2021) This feature has been removed from Memfault.
+
+:::
+
 You can now specify per Cohort when Devices are able to update. If you only want
 to update Devices on the weekends, now you can! Find the new settings in the
 Cohort Settings card.
