Update July changelog with Laird

--- a/blog/2021-07-31.mdx
+++ b/blog/2021-07-31.mdx
@@ -72,6 +72,23 @@ during development.
 [Check out our documentation](https://mflt.io/symbol-file-build-ids) to learn
 more and start using Build ID's.
 
+## Laird Connectivity Integrates with Memfault
+
+[Laird Connectivity](https://www.lairdconnect.com/) has
+[partnered with Memfault](https://memfault.com/news/laird-connectivity-partners-with-memfault-to-offer-device-observability-platform-for-its-connected-low-power-cellular-bluetooth-product-line/)
+to provide remote debugging capabilities into their Pinnacle-100 LTE modem and
+and MG100 gateway.
+
+<p align="center">
+  <img width="600" src="/img/blog/2021-07-31-laird.png" />
+</p>
+
+Out of the box, Memfault will tailor the project to start monitoring LTE modem
+metrics which should speed up the debugging process.
+
+For more information, check out the
+[documentation on Github](https://github.com/LairdCP/Pinnacle-100-Firmware/blob/main/docs/memfault.md).
+
 ## General
 
 - Memfault is frequently used within customer support teams to answer quick
