MFLT-4273 Add emb Linux SWUpdate integration guide w sample config (#102)
* Get a first draft of Linux OTA management docs going

* Attend to @martijnthe and @HBehrens review comments

* Lift disclaimer about contacting us for Linux support

* Fix bad link to SWUpdate docs

Co-authored-by: Fausto Núñez Alberro <fausto.nunez@mailbox.org>

--- a/docs/android/android-releases-guide.mdx
+++ b/docs/android/android-releases-guide.mdx
@@ -205,8 +205,8 @@ Now let's deploy the release to the `default` cohort.
 :::note
 
 Any new device seen that has not explicitly been assigned to a custom cohort
-will be part of this cohort. To pre-create devices assigned to a specific cohort
-check out our [api-docs](https://api-docs.memfault.com/).
+will be part of the `default` cohort. To pre-create devices assigned to a
+specific cohort check out our [api-docs](https://api-docs.memfault.com/).
 
 :::
 
@@ -216,8 +216,8 @@ you will be prompted with options that can be performed for the release.
 
 ### Query for OTA Payload
 
-Now that we have a release uploaded let's walk through the steps to download the
-release on a device!
+Now that we have a release uploaded and published let's walk through the steps
+to download the release on a device!
 
 To receive an OTA Payload, a device will need to pass these REST API query
 parameters:
