--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -356,6 +356,15 @@ provides a convenience command:
 ./bort_cli.py enable-bort --bort-app-id your.app.id
 ```
 
+The `enable-bort` command runs this ADB command under the hood:
+
+```bash
+adb shell am broadcast --receiver-include-background \
+  -a com.memfault.intent.action.BORT_ENABLE \
+  -n your.app.id/com.memfault.bort.receivers.ShellControlReceiver \
+  --ez com.memfault.intent.extra.BORT_ENABLED true
+```
+
 ### Software Versions, Hardware Versions and Device Serials
 
 It is possible to customize which values to use as the Software Version,
