Add getting started guide for DA1469x (#103)

--- a/src/pages/_partials/_steps/_upload-symbol-file.mdx
+++ b/src/pages/_partials/_steps/_upload-symbol-file.mdx
@@ -1,4 +1,4 @@
-At this point you should be able to generate a test events and crashes and push
+At this point you should be able to generate test events and crashes and push
 the data to the Memfault UI.
 
 You can confirm the error traces and crashes have arrived succesfully by
