--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -13,6 +13,7 @@ sidebar_label: Memfault Terminology
 | Coredump                                         | A capture of the entire memory space of a Device which will generate a Trace in Memfault                                                                                                                                                                                                                                                                                                                                               |
 | Deployment                                       | When a Release is pushed to a particular Cohort. This means that any Device in the given Cohort will be able to query and update to this Release                                                                                                                                                                                                                                                                                       |
 | Device                                           | An edge device that communicates with Memfault. It can report Events, be updated with new software, grouped into Cohorts, etc.                                                                                                                                                                                                                                                                                                         |
+| Device Attribute                                 | The latest value reported for a device for a custom metric (e.g. `battery_level`).                                                                                                                                                                                                                                                                                                                                                     |
 | Device Serial                                    | The Unique Identifier of a Device                                                                                                                                                                                                                                                                                                                                                                                                      |
 | Device - Active <a name="device-active"></a>     | A device that has reported diagnostics data in the last week.                                                                                                                                                                                                                                                                                                                                                                          |
 | Device - Inactive <a name="device-inactive"></a> | A device that has previously reported diagnostics data, but not in the last week.                                                                                                                                                                                                                                                                                                                                                      |
