--- a/docs/mcu/heap-stats.mdx
+++ b/docs/mcu/heap-stats.mdx
@@ -25,7 +25,7 @@ Set this in `memfault_platform_config.h`:
 #define MEMFAULT_COREDUMP_COLLECT_HEAP_STATS 1
 ```
 
-### 2. Instrument the `malloc`/`free` calls
+### 2. Instrument the `malloc` and `free` calls
 
 <Tabs
   defaultValue="baremetal"
@@ -34,7 +34,7 @@ Set this in `memfault_platform_config.h`:
     {label: 'FreeRTOS', value: 'freertos'},
   ]}>
   <TabItem value="baremetal">
-For newlib or other typical libc-provided `malloc`/`free`, you can add the
+For newlib or other typical libc-provided `malloc` and `free`, you can add the
 following wrapper functions (same would apply to other malloc implementations):
 
 ```c
